syntax = "proto3";

package sample;

option go_package = "./pb";

message HelloPersonMessageRequest {
  string name = 1;
  uint32 age = 2;
}

message HelloPersonMessageResponse {
  string hello_message = 1;
}

service Hello {
  rpc HelloPerson (HelloPersonMessageRequest) returns (HelloPersonMessageResponse);
}
